# babycare_RAG_CMD

./: INTEGRATION_GUIDE.md  README.md  README_RAG_TOOL.md  action.py  agent.py  app.py  babycare_synonyms.json  decision.py  env-template  main.py  math_mcp_embeddings.py  memory.py  models.py  perception.py  pyproject.toml  setup_rag.py  temperature_rules.py
babycare_rag/: __init__.py  api.py  config.py  core.py  document_processor.py  models.py  search_engine.py
documents/: baby-d-vitamin-d3.html  report content.docx
examples/simple_integration/: my_baby_app.py
faiss_index/: doc_index_cache.json  metadata.json
test_tools/: api_test.py  cli_test.py  integration_example.py
